--- a/trial_versions/style.css
+++ b/trial_versions/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0; 
     padding: 0;
+    font-family: 'Ubuntu', sans-serif;
 }
 .header{
     min-height: 100vh;
@@ -9,4 +10,44 @@
     background-position: center;
     background-size: cover;
     position: relative;
+}
+nav{
+    display: flex;
+    padding: 2% 6%;
+    justify-content: space-between;
+    align-items: center;
+}
+nav img{
+    width: 150px;
+    align-items: left;
+
+}
+.nav-links{
+    flex: 1;
+    text-align: right;
+
+}
+.nav-links ul li{
+    list-style: none;
+    display: inline-block;
+    padding: 8px 12px;
+    position: relative;
+}
+
+.nav-links ul li a{
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    font-size: 14;
+}
+.nav-links ul li::after{
+    content: '';
+    width: 0%;
+    height: 2px;
+    background: rgb(249, 138, 197);
+    display: block;
+    margin: auto;
+    transition: 0.5s;
+}
+.nav-links ul li:hover::after{
+    width: 100%;
 }
