--- a/trial_versions/style.css
+++ b/trial_versions/style.css
@@ -90,6 +90,64 @@ nav img{
 nav .fa-solid{
     display: none;
 }
+
+/*----------Course--------*/
+.course{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+h1{
+    font-size: 36px;
+    font-weight: 600;
+
+}
+p{
+    color: #202020;
+    font-size:14px ;
+    font-weight: 300;
+    line-height: 22px;
+    padding: 10px;
+
+}
+.row{
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-between;
+}
+.course_col{
+    flex-basis: 31%;
+    background: #ff74a042;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    padding: 20px 12px;
+    box-sizing: border-box;
+    transition: 0.4s ;
+}
+h3{
+    text-align: center;
+    font-weight: 600;
+    margin: 10px 0;
+
+}
+.course_col:hover{
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.231);
+}
+
+
+/*-------Campus---*/
+
+.campus{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+}
+.campus_col{
+    flex-basis: 32%;
+}
+
 @media (max-width: 700px){
     .textbox h1{
         font-size: 24px;
@@ -103,7 +161,7 @@ nav .fa-solid{
         height: 100vh;
         width: 200px;
         top: 0;
-        right: 0;
+        right: -300px;
         text-align: left;
         z-index: 2;
         transition: 1s;
@@ -119,5 +177,8 @@ nav .fa-solid{
         padding: 30px;
 
     }
-    
+    /*course*/
+    .row{
+        flex-direction: column;
+    }
 }
